<resources>
    <string name="app_name">ManoTensão</string>
    <string name="mano">ManoTensão</string>
    <string name="precisando">Precisando de uma mão?</string>
    <string name="ajuda">A gente te ajuda!</string>
    <string name="seta">➔</string>
    <string name="title_activity_login">Login</string>
    <string name="bem_vindo">BEM VINDO DE VOLTA!</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="email_input">seuemail@email.com</string>
    <string name="senha_input">**********</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tenho_cadastro">Não tenho cadastro</string>
    <string name="ou">OU</string>
    <string name="google">Sign in with Google</string>
    <string name="devemos">Como devemos seguir?</string>
    <string name="contratar">Quero contratar um prestador</string>
    <string name="busca">Estou em busca de profissionais para realizar serviços em minha residência</string>
    <string name="prestador">Sou prestador de\nserviços</string>
    <string name="profissional">Sou um profissional e desejo divulgar meus serviços e encontrar novos clientes</string>
    <string name="tenho_cadastro">Já tenho cadastro</string>
    <string name="quero_contratar">Quero contratar</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="pessoais">Informações pessoais</string>
    <string name="contato">Contato</string>
    <string name="endereco">Endereço</string>
    <string name="continuar">Continuar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="data_nascimeto">Data de nascimento</string>
    <string name="crie_senha">Crie uma senha</string>
    <string name="telefone">Telefone</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="que_bom">Que bom te ter com a gente!</string>
    <string name="agora_voce">Agora você faz parte da ManoTensao!</string>
    <string name="sou_prestador">Sou prestador</string>
    <string name="sobre_mim">Sobre mim</string>
    <string name="cnpj">CNPJ</string>
    <string name="escreva_mais">Escreva mais sobre você!</string>
    <string name="planos">Nossos planos</string>
    <string name="selecione">Selecione o melhor para o seu negócio!</string>
    <string name="basico">PLANO BÁSICO</string>
    <string name="vinte_e_nove">R$29,99</string>
    <string name="mes">/mês</string>
    <string name="envie_sem">  Envie mensagens sem cobrança</string>
    <string name="doze_propostas">  Obtenha até 12 propostas</string>
    <string name="assinar">Assinar</string>
    <string name="premium">PLANO PREMIUM</string>
    <string name="cento_e_nove">R$109,99</string>
    <string name="templete">  Template de orçamento</string>
    <string name="ilimitadas">  Propostas ilimitadas</string>
    <string name="pro">PLANO PRO</string>
    <string name="setenta_e_quatro">R$74,99</string>
    <string name="vinte_cinco_propostas">  Obtenha até 25 propostas</string>
    <string name="credito">  Cartão de crédito</string>
    <string name="metodo_pagamento">Método de pagamento</string>
    <string name="boleto">  Boleto bancário</string>
    <string name="nome_cartao">Nome impresso no cartão</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="vencimento">Vencimento</string>
    <string name="cvv">CVV</string>
    <string name="mesmo_endereco">Usar mesmo endereço de cobrança</string>
    <string name="plano">Plano:</string>
    <string name="total">Total:</string>
    <string name="gerar_boleto">Ao gerar o boleto, fique atento ao vencimento:</string>
    <string name="salvar">Salvar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>