<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroInfosPrestador">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sou_prestador"
                    android:textSize="20sp"
                    android:fontFamily="@font/montserrat"
                    android:textFontWeight="500"
                    android:id="@+id/tv_sou_prestador"
                    android:layout_marginTop="48dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000000"
                    />

                <ImageView
                    android:layout_width="98dp"
                    android:layout_height="93dp"
                    android:src="@mipmap/Ellipse"
                    android:id="@+id/iv_ellipse"
                    android:layout_below="@id/tv_sou_prestador"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="13dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:background="@drawable/custom_button_perfil"
                    android:id="@+id/btn_perfil"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/foto_perfil"
                    android:textSize="15sp"
                    android:layout_below="@id/tv_sou_prestador"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="131dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="46dp"
                    android:text="@string/pessoais"
                    android:background="@drawable/custom_button_private"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat"
                    android:textFontWeight="300"
                    android:id="@+id/btn_pessoais"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_avatar_cad_foreground"
                    android:layout_below="@id/btn_perfil"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="130dp"
                    android:paddingRight="60dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_completo"
                    android:layout_below="@id/btn_pessoais"
                    android:id="@+id/tv_nome_completo"
                    android:layout_marginTop="19dp"
                    android:layout_marginLeft="46dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_nome_completo"
                    android:id="@+id/et_nome_completo"
                    android:layout_marginLeft="36dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cnpj"
                    android:layout_below="@id/et_nome_completo"
                    android:id="@+id/tv_cnpj"
                    android:layout_marginTop="19dp"
                    android:layout_marginLeft="46dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_cnpj"
                    android:id="@+id/et_cnpj"
                    android:layout_marginLeft="36dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_nascimeto"
                    android:layout_below="@id/et_cnpj"
                    android:id="@+id/tv_data_nascimento"
                    android:layout_marginTop="19dp"
                    android:layout_marginLeft="46dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_data_nascimento"
                    android:id="@+id/et_data_nascimento"
                    android:layout_marginLeft="36dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crie_senha"
                    android:layout_below="@id/et_data_nascimento"
                    android:id="@+id/tv_crie_senha"
                    android:layout_marginTop="19dp"
                    android:layout_marginLeft="46dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_crie_senha"
                    android:id="@+id/et_crie_senha"
                    android:layout_marginLeft="36dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="46dp"
                    android:text="@string/contato"
                    android:background="@drawable/custom_button_private"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat"
                    android:textFontWeight="300"
                    android:id="@+id/btn_contato"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_phone_foreground"
                    android:layout_below="@id/et_crie_senha"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="21dp"
                    android:paddingRight="172dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="46dp"
                    android:text="@string/endereco"
                    android:fontFamily="@font/montserrat"
                    android:background="@drawable/custom_button_private"
                    android:textSize="14sp"
                    android:textFontWeight="300"
                    android:id="@+id/btn_endereco"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_house_foreground"
                    android:layout_below="@id/btn_contato"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="21dp"
                    android:paddingRight="159dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="330dp"
                    android:layout_height="46dp"
                    android:text="@string/sobre_mim"
                    android:fontFamily="@font/montserrat"
                    android:background="@drawable/custom_button_private"
                    android:textSize="14sp"
                    android:textFontWeight="300"
                    android:id="@+id/btn_sobre_mim"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_note_foreground"
                    android:layout_below="@id/btn_endereco"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="21dp"
                    android:paddingRight="159dp"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="135dp"
                    android:layout_height="30dp"
                    android:text="@string/continuar"
                    android:fontFamily="@font/montserrat"
                    android:background="@drawable/custom_button_continue"
                    android:textSize="14sp"
                    android:textFontWeight="400"
                    android:id="@+id/btn_entrar"
                    android:layout_below="@id/btn_sobre_mim"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="110dp"
                    android:layout_marginBottom="30dp"
                    />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>